# try-cursor-so

./: .pdm.toml  README.md  pyproject.toml
notebooks/: polars-simple-examples.ipynb  prefect_v1_example.ipynb  titanic_eda.ipynb
