[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black[jupyter]>=23.3.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "notebook>=6.5.3",
    "polars>=0.16.16",
    "pandas>=1.5.3",
    "prefect==1.4.1",
    "seaborn>=0.12.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
